Fixed enable / skip value button in address field not showing under some configurations

--- a/site/assets/less/flexi_form_fields.less
+++ b/site/assets/less/flexi_form_fields.less
@@ -471,7 +471,7 @@ div.container_fcfield div.toggle_all_values_buttons_box {
 		padding: 6px 12px 6px 32px !important;
 	}
 	span.fcfield-addvalue.fcfont-icon:before {
-		padding: 0 6px 0 2px;
+		padding: 0 6px 0 0;
 		content: "*";
 	}
 	span.fcfield-addvalue:before {
@@ -572,12 +572,13 @@ div.container_fcfield div.toggle_all_values_buttons_box {
 	/* FIELDs: Enable value button */
 	.fcfield-enablevalue {
 		margin: 0px 0px 2px 0px;
-		background: url(../images/page_single_edit.png) 8px 50% no-repeat;
+		background: url(../images/page_single_edit.png) 8% 50% no-repeat;
 	}
 	.fcfield-enablevalue:not(.fcfont-icon) {
 		padding: 4px 4px 4px 32px !important;
 	}
 	span.fcfield-enablevalue.fcfont-icon:before {
+		padding: 0 6px 0 0;
 		content: "\2b";
 	}
 	span.fcfield-enablevalue:before {
@@ -587,12 +588,13 @@ div.container_fcfield div.toggle_all_values_buttons_box {
 	/* FIELDs: Delete value button */
 	.fcfield-disablevalue {
 		margin: 0px 0px 2px 0px;
-		background: url(../images/publish_r.png) 8px 50% no-repeat;
+		background: url(../images/publish_r.png) 8% 50% no-repeat;
 	}
 	.fcfield-disablevalue:not(.fcfont-icon) {
 		padding: 4px 4px 4px 32px !important;
 	}
 	span.fcfield-disablevalue.fcfont-icon:before {
+		padding: 0 6px 0 0;
 		content: "\49";
 	}
 	span.fcfield-disablevalue:before {
